[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Level0.gd" type="Script" id=1]
[ext_resource path="res://UIs/GUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/SetterParallaxBackground.gd" type="Script" id=3]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Components/EnemySpawner.tscn" type="PackedScene" id=5]
[ext_resource path="res://UIs/GameOverUI.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 160, 2.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 38.5, 68.5 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 35, 101 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Starting"
tracks/0/type = "value"
tracks/0/path = NodePath("Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -20, 101 ), Vector2( 35, 101 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_game"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "finishing"

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "accelerate"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="Level0" type="Node2D"]
script = ExtResource( 1 )

[node name="GUI" parent="." instance=ExtResource( 2 )]

[node name="SetterParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 35, 101 )

[node name="EnemySpawner" parent="." instance=ExtResource( 5 )]
position = Vector2( 268, 76 )

[node name="PhysicGround" type="StaticBody2D" parent="."]
position = Vector2( 159, 103 )
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PhysicGround"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="MataSobras5000" type="Area2D" parent="."]
position = Vector2( -42, 56 )
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="MataSobras5000"]
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Starting"
anims/RESET = SubResource( 4 )
anims/Starting = SubResource( 5 )
anims/finishing = SubResource( 6 )

[node name="GameOverUI" parent="." instance=ExtResource( 6 )]

[node name="Accelerator" type="HSlider" parent="."]
margin_left = -84.0
margin_top = -37.0
margin_right = -6.0
margin_bottom = -21.0
max_value = 1.0
step = 0.01
editable = false
scrollable = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Accelerator"]
anims/RESET = SubResource( 7 )
anims/accelerate = SubResource( 8 )

[connection signal="body_exited" from="MataSobras5000" to="." method="_on_MataSobras5000_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="value_changed" from="Accelerator" to="." method="_on_Accelerator_value_changed"]
